--- a/SalesManagementApp/SalesManagementApp.csproj
+++ b/SalesManagementApp/SalesManagementApp.csproj
@@ -7,35 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Pages\ProductCatalog.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Syncfusion.Blazor.Core" Version="22.2.9" />
-    <PackageReference Include="Syncfusion.Blazor.Grid" Version="22.2.9" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="22.2.9" />
+    <PackageReference Include="Syncfusion.Blazor.Core" Version="22.2.12" />
+    <PackageReference Include="Syncfusion.Blazor.Grid" Version="22.2.12" />
+    <PackageReference Include="Syncfusion.Blazor.Lists" Version="22.2.12" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="22.2.12" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\Images\Products\" />
     <Folder Include="wwwroot\Images\Profile\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\ProductCatalog.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="Pages\ProductCatalog.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Pages\ProductCatalog.razor" />
   </ItemGroup>
 
 </Project>
