--- a/SalesManagementApp/SalesManagementApp.csproj
+++ b/SalesManagementApp/SalesManagementApp.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Blazor.Charts" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Core" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Grid" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Lists" Version="22.2.12" />
