Final for the day

--- a/SalesManagementApp/SalesManagementApp.csproj
+++ b/SalesManagementApp/SalesManagementApp.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Syncfusion.Blazor.Charts" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Core" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Grid" Version="22.2.12" />
+    <PackageReference Include="Syncfusion.Blazor.Layouts" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Lists" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Notifications" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Themes" Version="22.2.12" />
