--- a/SalesManagementApp/SalesManagementApp.csproj
+++ b/SalesManagementApp/SalesManagementApp.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Pages\Organisation.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +14,7 @@
     </PackageReference>
     <PackageReference Include="Syncfusion.Blazor.Charts" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Core" Version="22.2.12" />
+    <PackageReference Include="Syncfusion.Blazor.Diagram" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Grid" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Layouts" Version="22.2.12" />
     <PackageReference Include="Syncfusion.Blazor.Lists" Version="22.2.12" />
@@ -28,18 +25,6 @@
   <ItemGroup>
     <Folder Include="wwwroot\Images\Products\" />
     <Folder Include="wwwroot\Images\Profile\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Organisation.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="Pages\Organisation.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Pages\Organisation.razor" />
   </ItemGroup>
 
 </Project>
