--- a/SalesManagementApp/appsettings.json
+++ b/SalesManagementApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SalesManagementDbConnection": "Server=LAPTOP-EB9G50S9\\SQLEXPRESS;Database=SalesManagementDb;Trusted_Connection=true;Encrypt=false"
+    "SalesManagementDbConnection": "Server=LAPTOP-EB9G50S9\\SQLEXPRESS01;Database=SalesManagementDb;Trusted_Connection=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
